change heading to h1, add p tag

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
 
   <body>
-      <h> This is the Website for the Group project A4 </h>
+      <h1> This is the Website for the Group project A4 </h1>
+      <p> Place text content in here. </p>
   </body>
 
 </html>
