--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
 <html>
 
   <body>
+    <nav>
+      <ul>
+        <li>Description of Scrum</li>
+        <li>How to Use/ Example/Use Case</li>
+        <li>Why Use Scrum/Benefits</li>
+      </ul>
+     <nav>
+    <article>
       <h1> This is the Website for the Group project A4 </h1>
       <p> Place text content in here. </p>
+    </article>
   </body>
 
 </html>
