--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <ul>
         <li>Description of Scrum</li>
         <li>How to Use/ Example/Use Case</li>
-        <li>Why Use Scrum/Benefits</li>
+        <li>Why Use Scrum/Values</li>
       </ul>
      <nav>
     <article>
